--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!-- Write your HTML in this file -->
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <title>
+      This Test
+    </title>
   </head>
   <body>
     
